--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.10.0",
     "@types/styled-components": "^5.1.4",
+    "firebase": "^7.24.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "stripe": "^8.115.0",
     "styled-components": "^5.2.0"
   }
 }
