--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.24.0",
     "next": "9.5.5",
     "react": "16.14.0",
+    "react-burger-menu": "^2.9.0",
     "react-dom": "16.14.0",
     "stripe": "^8.115.0",
     "styled-components": "^5.2.0"
