--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.14.0",
     "react-burger-menu": "^2.9.0",
     "react-dom": "16.14.0",
+    "react-toast-notifications": "^2.4.0",
     "stripe": "^8.115.0",
     "styled-components": "^5.2.0"
   }
