--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^1.10.0",
     "@types/styled-components": "^5.1.4",
     "firebase": "^7.24.0",
+    "moment": "^2.29.1",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-burger-menu": "^2.9.0",
