--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.14.0",
     "react-burger-menu": "^2.9.0",
     "react-dom": "16.14.0",
+    "react-player": "^2.7.0",
     "react-textarea-autosize": "^8.3.0",
     "react-toast-notifications": "^2.4.0",
     "stripe": "^8.115.0",
