--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-textarea-autosize": "^8.3.0",
     "react-toast-notifications": "^2.4.0",
     "stripe": "^8.115.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "unsplash-js": "^6.3.0"
   }
 }
