--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/translate": "^6.0.4",
     "@sendgrid/client": "^7.3.0",
     "@stripe/stripe-js": "^1.10.0",
     "@types/styled-components": "^5.1.4",
@@ -21,10 +22,12 @@
     "react-burger-menu": "^2.9.0",
     "react-dom": "16.14.0",
     "react-player": "^2.7.0",
+    "react-text-selection-popover": "^1.3.2",
     "react-textarea-autosize": "^8.3.0",
     "react-toast-notifications": "^2.4.0",
     "stripe": "^8.115.0",
     "styled-components": "^5.2.0",
-    "unsplash-js": "^6.3.0"
+    "unsplash-js": "^6.3.0",
+    "use-debounce": "^5.1.0"
   }
 }
