--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-burger-menu": "^2.9.0",
     "react-dom": "16.14.0",
     "react-player": "^2.7.0",
+    "react-sticky": "^6.0.3",
     "react-text-selection-popover": "^1.3.2",
     "react-textarea-autosize": "^8.3.0",
     "react-toast-notifications": "^2.4.0",
