--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "styled-components": "^5.2.0",
     "unsplash-js": "^6.3.0",
     "use-debounce": "^5.1.0"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
