--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.14.0",
     "react-audio-player": "^0.14.0",
     "react-burger-menu": "^2.9.0",
+    "react-confetti": "^6.0.0",
     "react-dom": "16.14.0",
     "react-player": "^2.7.0",
     "react-sticky": "^6.0.3",
