--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^9.4.1",
     "moment": "^2.29.1",
     "next": "9.5.5",
+    "next-seo": "^4.17.0",
     "react": "16.14.0",
     "react-audio-player": "^0.14.0",
     "react-burger-menu": "^2.9.0",
