--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "16.14.0",
     "react-paginate": "^7.0.0",
     "react-player": "^2.7.0",
+    "react-render-html": "^0.6.0",
     "react-sticky": "^6.0.3",
     "react-text-selection-popover": "^1.3.2",
     "react-textarea-autosize": "^8.3.0",
