--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.4.1",
+    "form-data": "^4.0.0",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "next": "9.5.5",
+    "next-connect": "^0.10.0",
     "next-seo": "^4.17.0",
     "react": "16.14.0",
     "react-audio-player": "^0.14.0",
