--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "export-to-csv": "^0.2.1",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.4.1",
+    "mixpanel-browser": "^2.41.0",
     "moment": "^2.29.1",
     "next": "9.5.5",
     "next-seo": "^4.17.0",
