--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/client": "^7.3.0",
     "@stripe/stripe-js": "^1.10.0",
     "@types/styled-components": "^5.1.4",
+    "boring-avatars": "^1.5.5",
     "cors": "^2.8.5",
     "export-to-csv": "^0.2.1",
     "firebase": "^7.24.0",
@@ -25,6 +26,7 @@
     "react-burger-menu": "^2.9.0",
     "react-confetti": "^6.0.0",
     "react-dom": "16.14.0",
+    "react-image-crop": "^8.6.9",
     "react-paginate": "^7.0.0",
     "react-player": "^2.7.0",
     "react-select": "^4.3.0",
