--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.3.5"
   }
 }
