--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-select": "^4.3.0",
     "react-text-selection-popover": "^1.3.2",
     "react-textarea-autosize": "^8.3.0",
+    "react-tiny-popover": "^7.0.0",
     "react-toast-notifications": "^2.4.0",
     "stripe": "^8.115.0",
     "styled-components": "^5.2.0",
