--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-paginate": "^7.0.0",
     "react-player": "^2.7.0",
     "react-select": "^4.3.1",
+    "react-table": "^7.7.0",
     "react-text-selection-popover": "^1.3.2",
     "react-textarea-autosize": "^8.3.0",
     "react-tiny-popover": "^7.0.0",
