--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/translate": "^6.0.4",
     "@sendgrid/client": "^7.3.0",
     "@stripe/stripe-js": "^1.10.0",
+    "@supabase/supabase-js": "^1.35.3",
     "@types/styled-components": "^5.1.4",
     "boring-avatars": "^1.5.5",
     "cors": "^2.8.5",
@@ -50,6 +51,6 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.4"
   }
 }
